--- a/RestWebService/RestWebService/RestWebService.csproj
+++ b/RestWebService/RestWebService/RestWebService.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Controllers\AnimalController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Database\dbConnection.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
